--- a/styling/styles.css
+++ b/styling/styles.css
@@ -26,7 +26,7 @@
         }
         
         .link-sections p {
-            color: brown;
+            color: teal;
             font-size: 14px;
             border: 0px;
         
